MSVC: don't use the variable name LINK in generated makefiles

Rename LINK to LINKER. The MSVC linker uses the environment
variable LINK to pass additional command line arguments.
We must not hide this variable.

Task-number: QTBUG-28332

Change-Id: Id78476d1cf4a73175b9f47292c67f38a43ae5ba4
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

cregit: b4b02fe87679d5fdcaa8b3f6f35f65c9c13b5ee3 https://github.com/qt/qtbase/commit/b4b02fe87679d5fdcaa8b3f6f35f65c9c13b5ee3